crates/pg_syntax/tests/snapshots/postgres_regress/brin_multi@43.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE INDEX brin_test_multi_b_idx ON brin_test_multi USING brin (b) WITH (pages_per_range = 2);
---
IndexStmt@0..96
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Index@7..12 "INDEX"
  Whitespace@12..13 " "
  Ident@13..34 "brin_test_multi_b_idx"
  Whitespace@34..35 " "
  On@35..37 "ON"
  Whitespace@37..38 " "
  RangeVar@38..53
    Ident@38..53 "brin_test_multi"
  Whitespace@53..54 " "
  Using@54..59 "USING"
  Whitespace@59..60 " "
  Ident@60..64 "brin"
  Whitespace@64..65 " "
  Ascii40@65..66 "("
  IndexElem@66..67
    Ident@66..67 "b"
  Ascii41@67..68 ")"
  Whitespace@68..69 " "
  With@69..73 "WITH"
  Whitespace@73..74 " "
  Ascii40@74..75 "("
  DefElem@75..94
    Ident@75..90 "pages_per_range"
    Whitespace@90..91 " "
    Ascii61@91..92 "="
    Whitespace@92..93 " "
    Iconst@93..94 "2"
  Ascii41@94..95 ")"
  Ascii59@95..96 ";"

