crates/pg_syntax/tests/snapshots/postgres_regress/brin_multi@8.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE INDEX brinidx_multi ON brintest_multi USING brin (\n\tint8col int8_minmax_multi_ops,\n\tint2col int2_minmax_multi_ops,\n\tint4col int4_minmax_multi_ops,\n\toidcol oid_minmax_multi_ops,\n\ttidcol tid_minmax_multi_ops,\n\tfloat4col float4_minmax_multi_ops,\n\tfloat8col float8_minmax_multi_ops,\n\tmacaddrcol macaddr_minmax_multi_ops,\n\tmacaddr8col macaddr8_minmax_multi_ops,\n\tinetcol inet_minmax_multi_ops,\n\tcidrcol inet_minmax_multi_ops,\n\tdatecol date_minmax_multi_ops,\n\ttimecol time_minmax_multi_ops,\n\ttimestampcol timestamp_minmax_multi_ops,\n\ttimestamptzcol timestamptz_minmax_multi_ops,\n\tintervalcol interval_minmax_multi_ops,\n\ttimetzcol timetz_minmax_multi_ops,\n\tnumericcol numeric_minmax_multi_ops,\n\tuuidcol uuid_minmax_multi_ops,\n\tlsncol pg_lsn_minmax_multi_ops\n) with (pages_per_range = 1);"
---
IndexStmt@0..787
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Index@7..12 "INDEX"
  Whitespace@12..13 " "
  Ident@13..26 "brinidx_multi"
  Whitespace@26..27 " "
  On@27..29 "ON"
  Whitespace@29..30 " "
  RangeVar@30..44
    Ident@30..44 "brintest_multi"
  Whitespace@44..45 " "
  Using@45..50 "USING"
  Whitespace@50..51 " "
  Ident@51..55 "brin"
  Whitespace@55..56 " "
  Ascii40@56..57 "("
  Newline@57..58 "\n"
  Newline@58..59 "\t"
  IndexElem@59..88
    Ident@59..66 "int8col"
    Whitespace@66..67 " "
    Ident@67..88 "int8_minmax_multi_ops"
  Ascii44@88..89 ","
  Newline@89..90 "\n"
  Newline@90..91 "\t"
  IndexElem@91..120
    Ident@91..98 "int2col"
    Whitespace@98..99 " "
    Ident@99..120 "int2_minmax_multi_ops"
  Ascii44@120..121 ","
  Newline@121..122 "\n"
  Newline@122..123 "\t"
  IndexElem@123..152
    Ident@123..130 "int4col"
    Whitespace@130..131 " "
    Ident@131..152 "int4_minmax_multi_ops"
  Ascii44@152..153 ","
  Newline@153..154 "\n"
  Newline@154..155 "\t"
  IndexElem@155..182
    Ident@155..161 "oidcol"
    Whitespace@161..162 " "
    Ident@162..182 "oid_minmax_multi_ops"
  Ascii44@182..183 ","
  Newline@183..184 "\n"
  Newline@184..185 "\t"
  IndexElem@185..212
    Ident@185..191 "tidcol"
    Whitespace@191..192 " "
    Ident@192..212 "tid_minmax_multi_ops"
  Ascii44@212..213 ","
  Newline@213..214 "\n"
  Newline@214..215 "\t"
  IndexElem@215..248
    Ident@215..224 "float4col"
    Whitespace@224..225 " "
    Ident@225..248 "float4_minmax_multi_ops"
  Ascii44@248..249 ","
  Newline@249..250 "\n"
  Newline@250..251 "\t"
  IndexElem@251..284
    Ident@251..260 "float8col"
    Whitespace@260..261 " "
    Ident@261..284 "float8_minmax_multi_ops"
  Ascii44@284..285 ","
  Newline@285..286 "\n"
  Newline@286..287 "\t"
  IndexElem@287..322
    Ident@287..297 "macaddrcol"
    Whitespace@297..298 " "
    Ident@298..322 "macaddr_minmax_multi_ops"
  Ascii44@322..323 ","
  Newline@323..324 "\n"
  Newline@324..325 "\t"
  IndexElem@325..362
    Ident@325..336 "macaddr8col"
    Whitespace@336..337 " "
    Ident@337..362 "macaddr8_minmax_multi ..."
  Ascii44@362..363 ","
  Newline@363..364 "\n"
  Newline@364..365 "\t"
  IndexElem@365..394
    Ident@365..372 "inetcol"
    Whitespace@372..373 " "
    Ident@373..394 "inet_minmax_multi_ops"
  Ascii44@394..395 ","
  Newline@395..396 "\n"
  Newline@396..397 "\t"
  IndexElem@397..426
    Ident@397..404 "cidrcol"
    Whitespace@404..405 " "
    Ident@405..426 "inet_minmax_multi_ops"
  Ascii44@426..427 ","
  Newline@427..428 "\n"
  Newline@428..429 "\t"
  IndexElem@429..458
    Ident@429..436 "datecol"
    Whitespace@436..437 " "
    Ident@437..458 "date_minmax_multi_ops"
  Ascii44@458..459 ","
  Newline@459..460 "\n"
  Newline@460..461 "\t"
  IndexElem@461..490
    Ident@461..468 "timecol"
    Whitespace@468..469 " "
    Ident@469..490 "time_minmax_multi_ops"
  Ascii44@490..491 ","
  Newline@491..492 "\n"
  Newline@492..493 "\t"
  IndexElem@493..532
    Ident@493..505 "timestampcol"
    Whitespace@505..506 " "
    Ident@506..532 "timestamp_minmax_mult ..."
  Ascii44@532..533 ","
  Newline@533..534 "\n"
  Newline@534..535 "\t"
  IndexElem@535..578
    Ident@535..549 "timestamptzcol"
    Whitespace@549..550 " "
    Ident@550..578 "timestamptz_minmax_mu ..."
  Ascii44@578..579 ","
  Newline@579..580 "\n"
  Newline@580..581 "\t"
  IndexElem@581..618
    Ident@581..592 "intervalcol"
    Whitespace@592..593 " "
    Ident@593..618 "interval_minmax_multi ..."
  Ascii44@618..619 ","
  Newline@619..620 "\n"
  Newline@620..621 "\t"
  IndexElem@621..654
    Ident@621..630 "timetzcol"
    Whitespace@630..631 " "
    Ident@631..654 "timetz_minmax_multi_ops"
  Ascii44@654..655 ","
  Newline@655..656 "\n"
  Newline@656..657 "\t"
  IndexElem@657..692
    Ident@657..667 "numericcol"
    Whitespace@667..668 " "
    Ident@668..692 "numeric_minmax_multi_ops"
  Ascii44@692..693 ","
  Newline@693..694 "\n"
  Newline@694..695 "\t"
  IndexElem@695..724
    Ident@695..702 "uuidcol"
    Whitespace@702..703 " "
    Ident@703..724 "uuid_minmax_multi_ops"
  Ascii44@724..725 ","
  Newline@725..726 "\n"
  Newline@726..727 "\t"
  IndexElem@727..757
    Ident@727..733 "lsncol"
    Whitespace@733..734 " "
    Ident@734..757 "pg_lsn_minmax_multi_ops"
  Newline@757..758 "\n"
  Ascii41@758..759 ")"
  Whitespace@759..760 " "
  With@760..764 "with"
  Whitespace@764..765 " "
  Ascii40@765..766 "("
  DefElem@766..785
    Ident@766..781 "pages_per_range"
    Whitespace@781..782 " "
    Ascii61@782..783 "="
    Whitespace@783..784 " "
    Iconst@784..785 "1"
  Ascii41@785..786 ")"
  Ascii59@786..787 ";"

