crates/pg_syntax/tests/snapshots/postgres_regress/case@11.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO CASE2_TBL VALUES (1, NULL);"
---
InsertStmt@0..39
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..21
    Ident@12..21 "CASE2_TBL"
  Whitespace@21..22 " "
  SelectStmt@22..37
    Values@22..28 "VALUES"
    Whitespace@28..29 " "
    Ascii40@29..30 "("
    List@30..37
      AConst@30..31
        Iconst@30..31 "1"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      AConst@33..37
        NullP@33..37 "NULL"
  Ascii41@37..38 ")"
  Ascii59@38..39 ";"

