crates/pg_syntax/tests/snapshots/postgres_regress/case@15.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '3' AS \"One\",\n  CASE\n    WHEN 1 < 2 THEN 3\n    ELSE 4\n  END AS \"Simple ELSE\";"
---
SelectStmt@0..84
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..19
    AConst@7..10
      Sconst@7..10 "'3'"
    Whitespace@10..11 " "
    As@11..13 "AS"
    Whitespace@13..14 " "
    Ident@14..19 "\"One\""
  Ascii44@19..20 ","
  Newline@20..21 "\n"
  Whitespace@21..23 "  "
  ResTarget@23..83
    CaseExpr@23..66
      Case@23..27 "CASE"
      Newline@27..28 "\n"
      Whitespace@28..32 "    "
      CaseWhen@32..49
        When@32..36 "WHEN"
        Whitespace@36..37 " "
        AExpr@37..42
          AConst@37..38
            Iconst@37..38 "1"
          Whitespace@38..39 " "
          Ascii60@39..40 "<"
          Whitespace@40..41 " "
          AConst@41..42
            Iconst@41..42 "2"
        Whitespace@42..43 " "
        Then@43..47 "THEN"
        Whitespace@47..48 " "
        AConst@48..49
          Iconst@48..49 "3"
      Newline@49..50 "\n"
      Whitespace@50..54 "    "
      Else@54..58 "ELSE"
      Whitespace@58..59 " "
      AConst@59..60
        Iconst@59..60 "4"
      Newline@60..61 "\n"
      Whitespace@61..63 "  "
      EndP@63..66 "END"
    Whitespace@66..67 " "
    As@67..69 "AS"
    Whitespace@69..70 " "
    Ident@70..83 "\"Simple ELSE\""
  Ascii59@83..84 ";"

