crates/pg_syntax/tests/snapshots/postgres_regress/case@17.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '6' AS \"One\",\n  CASE\n    WHEN 1 > 2 THEN 3\n    WHEN 4 < 5 THEN 6\n    ELSE 7\n  END AS \"Two WHEN with default\";"
---
SelectStmt@0..116
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..19
    AConst@7..10
      Sconst@7..10 "'6'"
    Whitespace@10..11 " "
    As@11..13 "AS"
    Whitespace@13..14 " "
    Ident@14..19 "\"One\""
  Ascii44@19..20 ","
  Newline@20..21 "\n"
  Whitespace@21..23 "  "
  ResTarget@23..115
    CaseExpr@23..88
      Case@23..27 "CASE"
      Newline@27..28 "\n"
      Whitespace@28..32 "    "
      CaseWhen@32..49
        When@32..36 "WHEN"
        Whitespace@36..37 " "
        AExpr@37..42
          AConst@37..38
            Iconst@37..38 "1"
          Whitespace@38..39 " "
          Ascii62@39..40 ">"
          Whitespace@40..41 " "
          AConst@41..42
            Iconst@41..42 "2"
        Whitespace@42..43 " "
        Then@43..47 "THEN"
        Whitespace@47..48 " "
        AConst@48..49
          Iconst@48..49 "3"
      Newline@49..50 "\n"
      Whitespace@50..54 "    "
      CaseWhen@54..71
        When@54..58 "WHEN"
        Whitespace@58..59 " "
        AExpr@59..64
          AConst@59..60
            Iconst@59..60 "4"
          Whitespace@60..61 " "
          Ascii60@61..62 "<"
          Whitespace@62..63 " "
          AConst@63..64
            Iconst@63..64 "5"
        Whitespace@64..65 " "
        Then@65..69 "THEN"
        Whitespace@69..70 " "
        AConst@70..71
          Iconst@70..71 "6"
      Newline@71..72 "\n"
      Whitespace@72..76 "    "
      Else@76..80 "ELSE"
      Whitespace@80..81 " "
      AConst@81..82
        Iconst@81..82 "7"
      Newline@82..83 "\n"
      Whitespace@83..85 "  "
      EndP@85..88 "END"
    Whitespace@88..89 " "
    As@89..91 "AS"
    Whitespace@91..92 " "
    Ident@92..115 "\"Two WHEN with default\""
  Ascii59@115..116 ";"

