crates/pg_syntax/tests/snapshots/postgres_regress/case@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE CASE2_TBL (\n  i integer,\n  j integer\n);"
---
CreateStmt@0..52
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..22
    Ident@13..22 "CASE2_TBL"
  Whitespace@22..23 " "
  Ascii40@23..24 "("
  Newline@24..25 "\n"
  Whitespace@25..27 "  "
  ColumnDef@27..36
    Ident@27..28 "i"
    Whitespace@28..29 " "
    TypeName@29..36
      Integer@29..36 "integer"
  Ascii44@36..37 ","
  Newline@37..38 "\n"
  Whitespace@38..40 "  "
  ColumnDef@40..49
    Ident@40..41 "j"
    Whitespace@41..42 " "
    TypeName@42..49
      Integer@42..49 "integer"
  Newline@49..50 "\n"
  Ascii41@50..51 ")"
  Ascii59@51..52 ";"

