crates/pg_syntax/tests/snapshots/postgres_regress/case@20.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT CASE 1 WHEN 0 THEN 1/0 WHEN 1 THEN 1 ELSE 2/0 END;
---
SelectStmt@0..57
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..56
    CaseExpr@7..56
      Case@7..11 "CASE"
      Whitespace@11..12 " "
      AConst@12..13
        Iconst@12..13 "1"
      Whitespace@13..14 " "
      CaseWhen@14..29
        When@14..18 "WHEN"
        Whitespace@18..19 " "
        AConst@19..20
          Iconst@19..20 "0"
        Whitespace@20..21 " "
        Then@21..25 "THEN"
        Whitespace@25..26 " "
        AExpr@26..29
          AConst@26..27
            Iconst@26..27 "1"
          Ascii47@27..28 "/"
          AConst@28..29
            Iconst@28..29 "0"
      Whitespace@29..30 " "
      CaseWhen@30..43
        When@30..34 "WHEN"
        Whitespace@34..35 " "
        AConst@35..36
          Iconst@35..36 "1"
        Whitespace@36..37 " "
        Then@37..41 "THEN"
        Whitespace@41..42 " "
        AConst@42..43
          Iconst@42..43 "1"
      Whitespace@43..44 " "
      Else@44..48 "ELSE"
      Whitespace@48..49 " "
      AExpr@49..52
        AConst@49..50
          Iconst@49..50 "2"
        Ascii47@50..51 "/"
        AConst@51..52
          Iconst@51..52 "0"
      Whitespace@52..53 " "
      EndP@53..56 "END"
  Ascii59@56..57 ";"

